@@ -1,3 +1,5 @@
+Sim Sharing: renamed "ammeter" => "nonContactAmmeter"
+Renamed VirtualAmmeterNode => NonContactAmmeterNode
 Sim Sharing: Added messages for moving the ammeter probe (limit to every 500ms), see #3497
 Sim Sharing: Added messages for moving the voltmeter probe nodes (limit to every 500ms), see #3497
 Sim Sharing: Added messages for all components on the control panel
